fix button alignment

--- a/components/key-management.html
+++ b/components/key-management.html
@@ -272,10 +272,6 @@
       cursor: pointer;
     }
 
-    .w-250 {
-      width: 250px;
-    }
-
     .fade-in {
       animation: fadeIn ease 1s;
     }
@@ -460,8 +456,9 @@
         </div>
 
       </div>
-      <div class="buttons w-250">
+      <div class="buttons">
         <span id="manage-recover-button" class="recover-button" onclick="openRecoverKeys()">Recover Key</span>
+        <span class="button-space"></span>
         <span id="manage-close-button" class="close-button" onclick="closeWindow()">Close</span>
       </div>
     </div>
