fix 12 word spacing

--- a/components/key-management.html
+++ b/components/key-management.html
@@ -162,9 +162,7 @@
     }
 
     .word-container {
-      display: -webkit-flex;
       display: flex;
-      -webkit-flex-wrap: wrap;
       flex-wrap: wrap;
       -webkit-align-items: center;
       align-items: center;
@@ -172,6 +170,9 @@
       align-content: center;
       width: 80%;
       margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
     }
 
     #confirm-recovery-page {
