Make minor fixes

--- a/components/key-management.html
+++ b/components/key-management.html
@@ -312,7 +312,7 @@
       }
     }
   </style>
-  <title>Create</title </head>
+  </head>
 
 <body>
   <div id="generate-key-page" class="container">
