Clean up error messages and version information

--- a/components/key-management.html
+++ b/components/key-management.html
@@ -354,8 +354,7 @@
             12
             word phrase. <span class="emphasize">THERE IS NO WAY TO RECOVER THE 12 WORD PHRASE!</span> It is most
             advisable to write down your 12 word
-            phrase and store it somewhwere safe. Also make sure someone you trust has a copy in case you die in the
-            upcoming civil war, riots, corona virus, wild fires, hurricanes etc.
+            phrase and store it somewhwere safe.
           </p>
         </div>
       </div>
