adjust 12 word element width again

--- a/components/key-management.html
+++ b/components/key-management.html
@@ -168,6 +168,7 @@
       align-items: center;
       -webkit-align-content: center;
       align-content: center;
+      width: 90%;
       margin: auto;
       display: flex;
       align-items: center;
