Add confirmation message after generating address

--- a/components/key-management.html
+++ b/components/key-management.html
@@ -248,6 +248,12 @@
      visibility: hidden;
    }
 
+   #manage-generate-confirm {
+      color: white;
+      text-align: center;
+      visibility: hidden;
+   }
+
    .copy-confirm-fade-out {
      animation: fadeOut ease 3.1s;
    }
@@ -467,6 +473,9 @@
           <div id="manage-signing-address"></div>
           <img src="../assets/images/content_copy-24px.svg" alt="" class="manage-copy-address" onClick="copyAddress()">
         </div>
+      </div>
+      <div id="manage-generate-confirm">
+         Funding address generated! Send ETH to this address to get started.
       </div>
       <div id="manage-qr-code"></div>
       <div id="key-area">
